--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,8 @@
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
-
+          
+          <!-- This is for page names-->
           <nav>
              <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/research/">Research</a>
