--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,8 @@
           <nav>
              <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/research/">Research</a>
-              <a href="{{ site.baseurl }}/resources/">Resources</a>
+             <a href="{{ site.baseurl }}/teaching/">Teaching</a>
+            <a href="{{ site.baseurl }}/resources/">Resources</a>
           </nav>
         </header>
       </div>
