--- a/style.scss
+++ b/style.scss
@@ -98,16 +98,11 @@ ul ul, ol ul {
   list-style-type: circle;
 }
 
-  <style>
-    h1 {
-      color: green;
-    }
 
-    ul {
+ull {
       list-style-image: url("images/hand-drawn-octopus-drawing-illustration_23-2150536957.jpg");
       margin-left: 15px;
     }
-  </style>
 
 em, i {
   font-style: italic;
