--- a/style.scss
+++ b/style.scss
@@ -99,7 +99,7 @@ ul ul, ol ul {
 }
 
 
-ull {
+ul li {
       list-style-image: url("images/hand-drawn-octopus-drawing-illustration_23-2150536957.jpg");
       margin-left: 15px;
     }
