--- a/style.scss
+++ b/style.scss
@@ -77,26 +77,26 @@ a {
   }
 }
 
-ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
-}
+// ul, ol {
+//   margin: 15px 0;
+//   padding-left: 30px;
+// }
 
-ul {
-  list-style-type: disc;
-}
+// ul {
+//   list-style-type: disc;
+// }
 
-ol {
-  list-style-type: decimal;
-}
+// ol {
+//   list-style-type: decimal;
+// }
 
-ol ul, ul ol, ul ul, ol ol {
-  margin: 0;
-}
+// ol ul, ul ol, ul ul, ol ol {
+//   margin: 0;
+// }
 
-ul ul, ol ul {
-  list-style-type: circle;
-}
+// ul ul, ol ul {
+//   list-style-type: circle;
+// }
 
 ul {
    list-style-image: url("images/hand-drawn-octopus-drawing-illustration_23-2150536957.jpg");
