--- a/style.scss
+++ b/style.scss
@@ -99,7 +99,7 @@ a {
 // }
 
 ul {
-   list-style-image: url("images/hand-drawn-octopus-drawing-illustration_23-2150536957.jpg");
+   list-style-image: url("images/octopus_markers.jpg");
       margin-left: 15px;
 }
 
