--- a/style.scss
+++ b/style.scss
@@ -77,31 +77,31 @@ a {
   }
 }
 
-// ul, ol {
-//   margin: 15px 0;
-//   padding-left: 30px;
-// }
-
-// ul {
-//   list-style-type: disc;
-// }
-
-// ol {
-//   list-style-type: decimal;
-// }
-
-// ol ul, ul ol, ul ul, ol ol {
-//   margin: 0;
-// }
-
-// ul ul, ol ul {
-//   list-style-type: circle;
-// }
+ul, ol {
+  margin: 15px 0;
+  padding-left: 30px;
+}
 
 ul {
-   list-style-image: url("images/octopus_markers.jpg");
-      margin-left: 45px;
+  list-style-type: disc;
 }
+
+ol {
+  list-style-type: decimal;
+}
+
+ol ul, ul ol, ul ul, ol ol {
+  margin: 0;
+}
+
+ul ul, ol ul {
+  list-style-type: circle;
+}
+
+// ul {
+//    list-style-image: url("images/octopus_markers.jpg");
+//       margin-left: 45px;
+// }
 
 
 
