--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,7 @@ body {
   margin: 0 auto;
   max-width: 1250px;
   padding: 0 10px;
-  width: 125%;
+  width: 1000px;
 }
 
 h1, h2, h3, h4, h5, h6 {
