--- a/style.scss
+++ b/style.scss
@@ -289,6 +289,7 @@ footer {
   padding: 20px 0;
   text-align: center;
 }
+sup {font-size:xx-small; vertical-align:top;}
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
